# vulkan-experiments

./: Cargo.toml
assets/: torus.gltf
src/: camera.rs  examples.rs  game.rs  game_object.rs  main.rs  model.rs  point_light.frag  point_light.vert  point_light_renderer.rs  render_ctx.rs  shader.frag  shader.vert  world_renderer.rs
