[package]
name = "vulk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.10.0"
bevy_time = "0.10.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
crossbeam = "0.8.2"
glam = "0.23.0"
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
vulkano-util = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.5"
obj-rs = { version = "0.7", default-features = false }
