[package]
name = "vulk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.10.0"
bevy_time = "0.10.0"
crossbeam = "0.8.2"
glam = "0.23.0"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", features = ["serde"]}
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git" }
vulkano-util = { git = "https://github.com/vulkano-rs/vulkano.git" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git" }
winit = "0.28"
obj-rs = { version = "0.7", default-features = false }
